chore: update db to embrace the customer concept
